--- a/examples/table.html
+++ b/examples/table.html
@@ -3,6 +3,9 @@
 <head>
     <title></title>
     <style>
+        .container {
+            height: 200px;
+        }
         .aperture {
             border: 1px solid;
         }
@@ -11,6 +14,6 @@
 <body>
     <div class="container"></div>
     <script src="../dist/index.js"></script>
-    <script src="app.js"></script>
+    <script src="table.js"></script>
 </body>
 </html>
